@@ -1,5 +1,8 @@
 2017-03-05  Allen D. Ball  <ball@sol.local>
 
+	* Added support for <http-head/>, <http-options/>, and
+	<http-patch> Ant Tasks and targets.
+
 	* src/main/java/ball/http/client/method/AnnotatedHttpHead.java,
 	src/main/java/ball/http/client/method/AnnotatedHttpOptions.java,
 	src/main/java/ball/http/client/method/AnnotatedHttpPatch.java:
